frontend/test/should_fail/index_exec_edge_countFromIndexSame_index2_mismatch.grg
#using "index_exec_model.gm"

sequence s(j:int)
{
	{ i:int=countEdgesFromIndexSame(fooi, j) }
}